# tochka-sdk

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: account_balances.rs  accounts.rs  consents.rs  customers.rs  decode_jwt.rs  get_operation.rs  invoices.rs  operations.rs  payment_capture_refund.rs  payment_registry.rs  payments.rs  sbp_qr.rs  statements.rs  subscriptions.rs  webhooks.rs
src/: client.rs  error.rs  jwt.rs  lib.rs
src/helpers/: mod.rs
src/methods/: account_balance.rs  accounts.rs  consents.rs  customers.rs  invoices.rs  mod.rs  payment_links.rs  payments.rs  sbp.rs  statements.rs  subscriptions.rs  webhooks.rs
src/types/: account.rs  balance.rs  consent.rs  entities.rs  invoice.rs  mod.rs  payment.rs  payment_for_sign.rs  receipt.rs  refund.rs  registry.rs  retailer.rs  sbp.rs  service.rs  statements.rs  subscription.rs  tax.rs  transactions.rs  version.rs  webhooks.rs
tests/: accounts.rs  balance.rs  customer.rs  jwt.rs  operations.rs  payment_links.rs  statements.rs  webhooks.rs
tests/balance/: account_balance.rs
