[package]
name = "tochka_sdk"
version = "0.2.1"
edition = "2024"
description = "Rust SDK for Tochka Bank OpenAPI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ogonek-Education/tochka-sdk"

[lib]
name = "tochka_sdk"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
codes-iso-4217 = "0.1.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.20"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.18.1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48", features = ["full"] }
