[package]
name = "tochka_sdk"
version = "0.2.3"
edition = "2024"
description = "Rust SDK for Tochka Bank OpenAPI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ogonek-Education/tochka-sdk"

[lib]
name = "tochka_sdk"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0", features = ["serde"] }
codes-iso-4217 = "0"
reqwest = { version = "0", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0"
strum = { version = "0", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
validator = { version = "0", features = ["derive"] }
anyhow = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
log = "0"

[dev-dependencies]
dotenvy = "0"
tokio = { version = "1", features = ["full"] }
